[gd_scene load_steps=4 format=3 uid="uid://dh41j1mmxl5w5"]

[ext_resource type="Script" uid="uid://wos6y25joxtn" path="res://scenes/ui/combat/buff_icon/buff_icon.gd" id="1_4t1cf"]
[ext_resource type="Texture2D" uid="uid://cfupxjmvrm636" path="res://assets/ui_images/buff_icon/buff_icon_border.png" id="2_splm6"]
[ext_resource type="Texture2D" uid="uid://briak23acb13b" path="res://assets/ui_images/buff_icon/buff_icon_overlay.png" id="3_r17if"]

[node name="BuffIcon" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4t1cf")

[node name="BackgroundRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_splm6")

[node name="BuffTexture" type="TextureRect" parent="BackgroundRect"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 2

[node name="DurationProgressBar" type="TextureProgressBar" parent="BackgroundRect/BuffTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.66
fill_mode = 5
texture_progress = ExtResource("3_r17if")

[node name="DurationLabel" type="Label" parent="BackgroundRect/BuffTexture"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 1.0
offset_top = -2.0
offset_right = 41.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "5.0s"

[node name="StackLabel" type="Label" parent="BackgroundRect/BuffTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "2"
horizontal_alignment = 2
vertical_alignment = 2
